# aws-lambda-container-python

./: .pylintrc  Dockerfile  README.md  compose.local.yaml  compose.yml  pyproject.toml
.github/workflows/: health.yml
auto/: lambda-local-logs  lambda-local-start  lambda-local-stop
src/: addition.py  subtraction.py  validation.py
tests/: test_addition.py  test_subtraction.py  test_validation.py
